<?xml version="1.0"?>
<package format="2">
  <name>sim_msgs</name>
  <version>0.0.0</version>
  <description>Offline message simulation</description>

    <maintainer email="walter.quadrini@polimi.it">Walter Quadrini</maintainer>

  <license>TODO</license>

  <author email="walter.quadrini@polimi.it">Walter Quadrini</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>geometry_msgs</depend>
  <depend>industrial_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mars_common_msgs</depend>
  <depend>mars_agent_physical_robot_msgs</depend>

</package>
